package pl.delfinek.model.enums;

/**
 * Typ powiadomienia wysyłanego do użytkownika.
 */
public enum TypPowiadomienia {
    ZMIANA_HARMONOGRAMU,
    NOWE_ZAJECIA,
    ANULOWANIE_ZAJEC,
    NOWY_KURSANT,
    NOWA_WIADOMOSC,
    KOMUNIKAT_OGOLNY,
    POTWIERDZENIE_ZAPISU,
    ANULOWANIE_ZAPISU,
    REMONT_OBIEKTU
}
