package pl.delfinek.model.enums;

/**
 * Typ zajęć pływackich.
 */
public enum TypZajec {
    DZIECI_GR_A,
    DZIECI_GR_B,
    DZIECI_GR_C,
    DOROSLI_PODSTAWOWY,
    DOROSLI_SREDNI,
    DOROSLI_ZAAWANSOWANY,
    DOROSLI_PRO
}
